feat: payment gateway

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ DB_USER=
 DB_PASSWORD=
 DB_PORT=3306
 
+# payment gateway configuration
+MIDTRANS_SANDBOX_CLIENT_KEY=
+MIDTRANS_SANDBOX_SERVER_KEY=
+
