--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "midtrans-node-client": "^0.0.6",
     "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
@@ -41,6 +42,7 @@
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
