--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
+    "semver": "^7.5.2",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
